# Odyssey

./: .audit-skip  .bandit  .claude-address-review-5516.md  .claude-address-review-5519.md  .claude-address-review-5525.md  .claude-followup-5391.json  .claude-prompt-1538.md  .claude-prompt-5159.md  .claude-prompt-5449.md  .clinerules  .dockerignore  .editorconfig  .env  .env.example  .fix_script.sh  .follow-ups-5157.json  .followup-5159.json  .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  .markdownlint.yaml  .markdownlintignore  .mojo-version  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  PHASE_G_CORRECTED_PLAN.md  README.md  ROADMAP.md  SECURITY.md  coverage.toml  docker-compose.yml  index.html  justfile  mkdocs.yml  (+7 more)
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: agentic-workflows-orchestrator.md  architecture-design.md  chief-architect.md  ci-failure-analyzer.md  cicd-orchestrator.md  code-review-orchestrator.md  documentation-engineer.md  documentation-specialist.md  foundation-orchestrator.md  general-review-specialist.md  implementation-engineer.md  implementation-specialist.md  integration-design.md  log-analyzer.md  mojo-language-review-specialist.md  mojo-syntax-validator.md  numerical-stability-specialist.md  papers-orchestrator.md  performance-engineer.md  performance-specialist.md  security-design.md  security-review-specialist.md  security-specialist.md  shared-library-orchestrator.md  test-engineer.md  test-review-specialist.md  test-specialist.md  tooling-orchestrator.md
.claude/commands/: impl.md  review-feedback.md
.claude/hooks/: demo-safety-hooks.sh  learn-trigger.py
.claude/shared/: documentation-rules.md  git-commit-policy.md  github-issue-workflow.md  mojo-anti-patterns.md  mojo-guidelines.md  output-style-guidelines.md  pr-workflow.md  tool-use-optimization.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY-AUDIT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 06-question.yml  config.yml
.github/workflows/: README.md  _required.yml  asan-tests.yml  benchmark.yml  build-validation.yml  changelog-reminder.yml  (+40 more)
.pixi/: config.toml
.templates/: dataset_template.mojo  layer_template.mojo  model_template.mojo  tests_template.mojo  training_template.mojo
ANALYSIS_PROMPT/: index.html
CI-FAILURE-ROOT-CAUSE-ANALYSIS/: index.html
INSTALL/: index.html
MEMORY_REQUIREMENTS/: index.html
PRIVACY/: index.html
agents/: README.md  delegation-rules.md  hierarchy.md  mojo_rules.md
api/: index.html
benchmarks/: README.md  bench_matmul.mojo  bench_mixed_precision.mojo  bench_simd.mojo  reporter.mojo  simple_test.mojo  stats.mojo
conda.recipe/: recipe.yaml  test_import.mojo
configs/: BEST_PRACTICES.md  MIGRATION.md  README.md
datasets/: README.md
docker/: entrypoint.sh
docs/: ANALYSIS_PROMPT.md  CI-FAILURE-ROOT-CAUSE-ANALYSIS.md  INSTALL.md  MEMORY_REQUIREMENTS.md  PRIVACY.md  README.md  glossary.md  index.md  learnings.md
examples/: README.md  __init__.mojo  basic_usage.mojo  bf8_example.mojo  data_pipeline_demo.mojo  fp8_example.mojo  integer_example.mojo  mixed_precision_training.mojo  trait_based_layer.mojo
glossary/: index.html
learnings/: index.html
notebooks/: 01_introduction.ipynb  02_tensor_operations.ipynb  03_building_models.ipynb  04_training_mnist.ipynb  05_visualization.ipynb  06_advanced_techniques.ipynb  README.md
notes/: README.md  modular-6413-avx512-finding.md  mojo-cpu-detection-source-review.md
python/: pyproject.toml
python/odyssey/: __init__.py
python/odyssey/_data/: .gitkeep
python/projectodyssey/: __init__.py
python/projectodyssey/_data/: .gitkeep
repro/: README.md  bug_repro_lenet5_layers_monolithic.mojo.bug  bug_repro_vgg16_e2e_part1_pre_fix.merge-conflict-snapshot  bug_repro_vgg16_e2e_part1_pre_fix.mojo.bug  configs_kgen_crash.mojo  investigate_import_threshold.sh  kgen_jit_overflow_minimal.mojo  repro_6413_assert_almost_equal.mojo  repro_6413_python_import_os.mojo  repro_crash_standalone.mojo  repro_hello.mojo  repro_import_chain_synthetic.mojo  repro_jit_fortify_crash.mojo  repro_jit_heavy_import_test.mojo  repro_jit_targeted_imports_crash.mojo  repro_jit_volume_crash.mojo  repro_libasyncrt_crash.mojo  repro_libkgen_crash.mojo  repro_module_import_crash.mojo  repro_module_import_crash_fixed.mojo  repro_parametric_monomorphization_crash.mojo  run_all_experiments.sh  spinlock_deadlock.mojo  spinlock_race_condition.mojo
scripts/: README.md  analyze_issues.py  analyze_warnings.py  audit_shared_links.py  bench_precommit.py  build_configs_distribution.sh  build_data_package.sh  build_mojo.sh  build_pr_comment.py  build_training_package.sh  build_utils_package.sh  bump_version.sh  check-no-matmul-call-sites.sh  check_adr_review_dates.py  check_bare_mojo_calls.py  check_bare_pixi_mojo.py  check_changelog_updated.py  check_coverage.py  check_dep_sync.py  check_note_format.py  check_precommit_versions.py  check_readmes.py  check_runtime_output_patterns.py  check_source_coverage.py  check_stale_scripts.py  check_test_count.py  check_test_count_badge.py  check_version_sync.py  check_workflow_inventory.py  cleanup_stale_worktrees.sh  common.py  convert_image_to_idx.py  coredump-host-handler.sh  create_issues.py  detect_stale_scripts.py  download_cifar10.py  download_cifar100.py  download_datasets.py  download_emnist.py  download_fashion_mnist.py  (+57 more)
search/: search_index.json
shared/: INSTALL.md  MIGRATION.md  README.md  ROADMAP.md  __init__.mojo  version.mojo
tests/: README.md  conftest.mojo  test_audit_shared_links.py  test_check_print_debug_artifacts.py  test_check_test_count.py  test_check_workflow_inventory.py  test_core_operations.mojo  test_data_integrity.mojo  test_data_integrity_part1.mojo  test_data_integrity_part2.mojo  test_no_matmul_call_sites.py  test_paper_implementation_validation.py  test_quick_reference_transform.py  test_validate_installation_anchors.py  test_validate_test_coverage.py
tools/: INSTALL.md  INTEGRATION.md  README.md
(+2335 files in other folders)
