[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ProjectOdyssey"
version = "0.1.0"
description = "Mojo-based AI research platform for reproducing classic research papers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD"}
authors = [
    {name = "Micah Villmow", email = "4211002+mvillmow@users.noreply.github.com"}
]

dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["tests*", "notes*", "agents*", "papers*", "docs*", "logs*"]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "safety>=2.0.0",
    "bandit>=1.7.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py311"

# mypy configuration: mypy.ini is the single source of truth.
# Do NOT add [tool.mypy] here -- see mypy.ini for all mypy settings.
