# Dependencies are managed in pixi.toml (single source of truth).
# This file provides project metadata and tool configuration only.

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ProjectOdyssey"
version = "0.1.0"
description = "Mojo-based AI research platform for reproducing classic research papers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD"}
authors = [
    {name = "Micah Villmow", email = "4211002+mvillmow@users.noreply.github.com"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["tests*", "notes*", "agents*", "papers*", "docs*", "logs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py311"

# mypy configuration: mypy.ini is the single source of truth.
# Do NOT add [tool.mypy] here -- see mypy.ini for all mypy settings.
