# Wheel-only project config — pure-Python wheel that bundles
# `odyssey.mojopkg` as package data so consumers can
# `pip install odyssey` and feed the path to `mojo run -I`.
#
# Dependency-management note: this file is intentionally minimal and is
# NOT a source of truth for the project's dependencies. The repo-level
# `pixi.toml` remains the single source of truth per AGENTS.md. This
# pyproject.toml is consulted only when building the wheel.

[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odyssey"
version = "0.1.0"
description = "Odyssey: ML Odyssey shared library bundled as a Mojo .mojopkg. Use odyssey.import_dir() to get the path to feed `mojo run -I`."
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Micah Villmow", email = "4211002+mvillmow@users.noreply.github.com" },
]
requires-python = ">=3.10"
keywords = ["mojo", "ml", "tensor", "autograd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/HomericIntelligence/Odyssey"
Repository = "https://github.com/HomericIntelligence/Odyssey"
Issues = "https://github.com/HomericIntelligence/Odyssey/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["odyssey*"]

[tool.setuptools.package-data]
odyssey = ["_data/*.mojopkg"]
